--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
     }
   ],
   "require": {
-    "php": ">=5.5",
+    "php": "8.2",
     "illuminate/database": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
-    "ramsey/uuid": "^3.0|^4.0",
-    "doctrine/dbal": "^2.5|^3.0"
+    "ramsey/uuid": "^4.0",
+    "doctrine/dbal": "^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.5",
+    "phpunit/phpunit": "4.5",
     "mockery/mockery": "0.9.*",
     "codeclimate/php-test-reporter": "^0.3.2"
   },
