--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     }
   ],
   "require": {
-    "php": "8.4",
+    "php": ">=8.2",
     "illuminate/database": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
     "ramsey/uuid": "^4.0",
     "doctrine/dbal": "^3.0"
