--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   ],
   "require": {
   "php": ">=8.2",
-  "illuminate/database": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
+  "illuminate/database": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
   "ramsey/uuid": "^4.0",
   "doctrine/dbal": "^4.0"  
 },
